[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "faker_sqlalchemy"
description = "A Faker provider that generates data based on SQL Alchemy column types."
authors = [
    { name = "The Magnificant Nick", email = "send-me-spam@yahoo.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Utilities",
]
dependencies = [
    "faker >=10.0",
    "sqlalchemy >=1.3,<2.0",
]
dynamic = ["version"]
requires-python = ">=3.7"


[project.optional-dependencies]
doc = [
    "sphinx",
    "sphinx-rtd-theme",
]

test = [
    "black",
    "tox >=4.0.b2",
]


[project.urls]
Documentation = "https://faker-sqlalchemy.readthedocs.io/en/latest/"
Source = "https://github.com/nickswebsite/faker-sqlalchemy"
Homepage = "https://github.com/nickswebsite/faker-sqlalchemy"


[tool.black]
line-length = 120
